src/snapshots/glass__parser__tests__a * b.snap
---
source: src/parser.rs
expression: parse_expr_str(input)
---
Spanned {
    node: BinOp {
        op: Mul,
        left: Spanned {
            node: Var(
                "a",
            ),
            span: Span {
                start: 0,
                end: 1,
            },
        },
        right: Spanned {
            node: Var(
                "b",
            ),
            span: Span {
                start: 4,
                end: 5,
            },
        },
    },
    span: Span {
        start: 0,
        end: 5,
    },
}
